# my_blog_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: aws.yml
my_blog/: zappa_settings.json
my_blog/achievement/: admin.py  models.py  serializers.py  urls.py  views.py
my_blog/achievement/migrations/: 0001_initial.py  0002_achievement_corp.py  0002_alter_achievement_options.py  0003_alter_achievement_corp.py  0004_achievefile.py  0005_delete_achievefile.py  0006_achievefile.py  0007_achievement_main_work.py  0008_achievedescription_created_and_more.py  0009_achievement_owner.py  0010_alter_achievement_options_alter_achievement_corp_and_more.py
my_blog/career/: admin.py  models.py  serializers.py  urls.py  views.py
my_blog/career/migrations/: 0001_initial.py  0002_alter_career_end_date.py  0003_alter_career_options.py  (+3 more)
my_blog/common/: __init__.py  models.py  routers.py  serializers.py  viewsets.py
my_blog/dungeon/: admin.py  models.py  serializers.py  urls.py  views.py
my_blog/hunter/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
my_blog/info/: admin.py  models.py  serializers.py  views.py
my_blog/main/: urls.py  views.py
my_blog/me/: admin.py  models.py  serializer.py  urls.py  views.py
my_blog/my_blog/: conf.py  settings.py  urls.py
my_blog/post/: admin.py  models.py  serializers.py  urls.py  views.py
my_blog/qna/: admin.py  models.py  serializers.py  urls.py  views.py
my_blog/tests/: conftest.py
nginx/: Dockerfile  default.conf
(+47 files in other folders)
